--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="container">
         <h1>LEARN TO CODE.</h1>
         <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progateはオンラインプログラミング学習サービスです。</p>
-        <p>初心者にもやさしいスライドとレッスンで、Webサービスを作りながらプログラミングを学んでいきましょう。</p>
+        <p>MIMILABはWEBアプリの学習・実験サイトオです。</p>
+        <p>世の中に役立ちそうなサービスを実験的に開発、リリースします</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">新規登録はこちら</a>
           <p>or sign up with</p>
