--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <h1>LEARN TO CODE.</h1>
         <h1>LEARN TO BE CREATIVE.</h1>
-        <p>MIMILABはWEBアプリの学習・実験サイトオです。</p>
+        <p>MIMILABはWEBアプリの学習・実験サイトです。</p>
         <p>世の中に役立ちそうなサービスを実験的に開発、リリースします</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">新規登録はこちら</a>
